--- a/config/database.yml
+++ b/config/database.yml
@@ -21,5 +21,9 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+    adapter: postgresql
+    database: todoism
+    encoding: utf8
+    min_messages: warning
+    pool: 5
+    timeout: 5000
